--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="green">#38B43D</color>
     <color name="red">#E91E63</color>
     <color name="transparent">#D3D3D3</color>
+    <color name="yellow">#FFB300</color>
+    <color name="blue">#040C5E</color>
 </resources>
